# hai

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
crates/aarch64/: Cargo.toml
crates/aarch64/src/: interrupt.rs  lib.rs
crates/cpu64/: Cargo.toml  README.md
crates/cpu64/src/: address.rs  interrupt.rs  lib.rs  paging.rs
crates/kernel/: Cargo.toml  README.md
crates/kernel/src/: boot.rs  lib.rs  main.rs  memory.rs
crates/riscv64/: Cargo.toml
crates/riscv64/src/: interrupt.rs  lib.rs
crates/riscv64/src/register/: mod.rs  stvec.rs
crates/x86_64/: Cargo.toml
crates/x86_64/src/: address.rs  interrupt.rs  lib.rs  paging.rs
crates/x86_64/src/register/: cr0.rs  cr2.rs  cr3.rs  cr4.rs  cr8.rs  mod.rs  xcr0.rs
scripts/: qemu.rs
