[package]
name = "cpu64"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64 = { version = "0.1.0", path = "../aarch64"}

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv64 = { version = "0.1.0", path = "../riscv64"}

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.1.0", path = "../x86_64"}
