[package]
name = "kernel"
version = "0.1.0"
readme = "README.md"
description = "kernel"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
cpu64 = { path = "../cpu64" }
uefi-raw = "0.10.0"

[target.'cfg(target_os = "uefi")'.dependencies.uefi]
version = "0.34.1"
features = ["panic_handler", "alloc", "global_allocator", "logger"]
